Add SSL unverified mode configuration for pycsw
Avoid errors when using autohosted certificate like [SSL: CERTIFICATE_VERIFY_FAILED] certificate verify failed: unable to get local issuer certificate (_ssl.c:1129)

Not using in production environments

--- a/playbook/roles/supervisor/templates/workers/ckan_pycsw.conf.j2
+++ b/playbook/roles/supervisor/templates/workers/ckan_pycsw.conf.j2
@@ -12,6 +12,7 @@ environment=
     APP_DIR={{ pycsw_app_dir }},
     PYCSW_CKAN_SCHEMA={{ pycsw_ckan_schema }},
     PYCSW_OUPUT_SCHEMA={{ pycsw_output_schema}},
+    SSL_UNVERIFIED_MODE={{ pycsw_local_ssl_unverified }},
 user={{ ckan_user }}
 numprocs=1
 stdout_logfile={{ ckan_log_dir }}/ckan_pycsw.log
