Add maximum content length configuration for xloader in environment files

--- a/playbook/roles/ckan/templates/ckan.ini.j2
+++ b/playbook/roles/ckan/templates/ckan.ini.j2
@@ -95,8 +95,9 @@ ckanext.geoview.geojson.max_file_size = {{ ckanext__geoview__geojson__max_file_s
 
 ### ckanext-xloader
 ckanext.xloader.api_token = xloader_api_token
-ckanext.xloader.jobs_db.uri={{ ckanext__xloader__jobs_db__uri }}
+ckanext.xloader.jobs_db.uri = {{ ckanext__xloader__jobs_db__uri }}
 ckanext.xloader.ssl_verify = {{ ckanext__xloader__ssl_verify }}
+ckanext.xloader.max_content_length = {{ ckanext__xloader__max_content_length }}
 
 ### ckanext-pages
 ckan.pages.allow_html = False
