Add SSL verification configuration for schemingdcat CSW harvester

--- a/playbook/roles/ckan/templates/ckan.ini.j2
+++ b/playbook/roles/ckan/templates/ckan.ini.j2
@@ -74,6 +74,7 @@ ckanext.schemingdcat.social_linkedin = {{ ckanext__schemingdcat_social_linkedin 
 ckanext.schemingdcat.postgres.geojson_chars_limit = {{ ckanext__schemingdcat__postgres__geojson_chars_limit }}
 ckanext.schemingdcat.postgres.geojson_tolerance = {{ ckanext__schemingdcat__postgres__geojson_tolerance }}
 ckanext.schemingdcat.api.private_fields = {{ ckanext__schemingdcat__api__private_fields }}
+ckanext.schemingdcat.csw.ssl_verify = {{ ckanext__schemingdcat__csw__ssl_verify }}
 
 ### ckanext-openapi
 ckanext.openapi.endpoints = {{ ckanext__openapi__endpoints }}
