Refactor resource and image size configurations to use template variables
Avoid bugs when user upload files > 10MB (Default value)

--- a/playbook/roles/ckan/templates/ckan.ini.j2
+++ b/playbook/roles/ckan/templates/ckan.ini.j2
@@ -302,8 +302,8 @@ ckan.admin_tabs = {}
 
 ## Storage Settings ############################################################
 ckan.storage_path = {{ ckan_storage_dir}}
-ckan.max_resource_size = 10
-ckan.max_image_size = 2
+ckan.max_resource_size = {{ ckan__max_resource_size }}
+ckan.max_image_size = {{ ckan__max_image_size }}
 
 ## Uploader Settings ###########################################################
 ckan.upload.user.types = image
