Add DCAT-AP metadata enhancements and SSL verification configuration for schemingdcat_csw_harvester

--- a/playbook/roles/ckan/templates/ckan.ini.j2
+++ b/playbook/roles/ckan/templates/ckan.ini.j2
@@ -75,6 +75,15 @@ ckanext.schemingdcat.postgres.geojson_chars_limit = {{ ckanext__schemingdcat__po
 ckanext.schemingdcat.postgres.geojson_tolerance = {{ ckanext__schemingdcat__postgres__geojson_tolerance }}
 ckanext.schemingdcat.api.private_fields = {{ ckanext__schemingdcat__api__private_fields }}
 ckanext.schemingdcat.csw.ssl_verify = {{ ckanext__schemingdcat__csw__ssl_verify }}
+#### DCAT-AP Metadata enhancements
+ckanext.schemingdcat.dcat_ap.publisher.name = {{ ckanext__schemingdcat__dcat_ap__publisher__name }}
+ckanext.schemingdcat.dcat_ap.publisher.identifier = {{ ckanext__schemingdcat__dcat_ap__publisher__identifier }}
+ckanext.schemingdcat.dcat_ap.publisher.email = {{ ckanext__schemingdcat__dcat_ap__publisher__email }}
+ckanext.schemingdcat.dcat_ap.publisher.type = {{ ckanext__schemingdcat__dcat_ap__publisher__type }}
+ckanext.schemingdcat.dcat_ap.publisher.url = {{ ckanext__schemingdcat__dcat_ap__publisher__url }}
+ckanext.schemingdcat.dcat_ap.datastore_dataservice.title = {{ ckanext__schemingdcat__dcat_ap__datastore_dataservice__title }}
+ckanext.schemingdcat.dcat_ap.datastore_dataservice.description = {{ ckanext__schemingdcat__dcat_ap__datastore_dataservice__description }}
+ckanext.schemingdcat.dcat_ap.datastore_dataservice.endpoint_description = {{ ckanext__schemingdcat__dcat_ap__datastore_dataservice__endpoint_description }}
 
 ### ckanext-openapi
 ckanext.openapi.endpoints = {{ ckanext__openapi__endpoints }}
