--- a/playbook/roles/webserver/templates/sites-available/ckan-pycsw.conf.j2
+++ b/playbook/roles/webserver/templates/sites-available/ckan-pycsw.conf.j2
@@ -22,7 +22,14 @@ server {
 
     #Redirect root to CKAN location 
     location / {
-        return 301 {{ proxy_ckan_location }};
+        proxy_pass ${PROXY_CKAN_PROXY_PASS}/;
+        proxy_set_header X-Forwarded-For $remote_addr;
+        proxy_set_header Host $host;
+        #proxy_cache cache;
+        proxy_cache_bypass $cookie_auth_tkt;
+        proxy_no_cache $cookie_auth_tkt;
+        proxy_cache_valid 30m;
+        proxy_cache_key $host$scheme$proxy_host$request_uri;
     }
 
     # CKAN location with and without the slash appended (https://nginx.org/en/docs/http/ngx_http_core_module.html#location)
